@@ -16,7 +16,6 @@ import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -203,7 +202,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -238,7 +237,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -270,7 +269,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -305,7 +304,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -340,7 +339,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -375,7 +374,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -405,7 +404,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -437,7 +436,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("dueDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -482,7 +481,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("priorityDateOriginRef"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -514,7 +513,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("priorityDateOriginRef"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -546,7 +545,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("calculatedDates"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(2));
 
@@ -628,7 +627,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -658,7 +657,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
         assertTrue(workTypeResultList.contains(Map.of(
@@ -690,7 +689,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -723,7 +722,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -753,7 +752,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -790,7 +789,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -821,7 +820,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -852,7 +851,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("majorPriority"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -885,7 +884,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("title"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -920,7 +919,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("title"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -953,7 +952,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("title"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -989,7 +988,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("title"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1023,7 +1022,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("title"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1222,7 +1221,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("additionalProperties_roleAssignmentId"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1249,7 +1248,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("roleCategory"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1293,7 +1292,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("roleCategory"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1323,7 +1322,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("roleCategory"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1354,7 +1353,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
 
         List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("roleCategory"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultList.size(), is(1));
 
@@ -1368,7 +1367,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListPriorityDateOriginEarliest =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("priorityDateOriginEarliest"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListPriorityDateOriginEarliest.size(), is(1));
         assertTrue(workTypeResultListPriorityDateOriginEarliest.contains(Map.of(
@@ -1382,7 +1381,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateMustBeWorkingDay =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateMustBeWorkingDay"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateMustBeWorkingDay.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateMustBeWorkingDay.contains(Map.of(
@@ -1397,7 +1396,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateSkipNonWorkingDays =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateSkipNonWorkingDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateSkipNonWorkingDays.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateSkipNonWorkingDays.contains(Map.of(
@@ -1411,7 +1410,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListCalculatedDates =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("calculatedDates"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListCalculatedDates.size(), is(2));
         assertTrue(workTypeResultListCalculatedDates.contains(Map.of(
@@ -1425,7 +1424,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateOriginRef =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateOriginRef"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateOriginRef.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateOriginRef.contains(Map.of(
@@ -1439,7 +1438,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateIntervalDays =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateIntervalDays"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateIntervalDays.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateIntervalDays.contains(Map.of(
@@ -1454,7 +1453,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateNonWorkingCalendar =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateNonWorkingCalendar"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateNonWorkingCalendar.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateNonWorkingCalendar.contains(Map.of(
@@ -1469,7 +1468,7 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
         List<Map<String, Object>> workTypeResultListNextHearingDatePreDateNonWorkingDaysOfWeek =
             dmnDecisionTableResult.getResultList().stream()
             .filter((r) -> r.containsValue("nextHearingDatePreDateNonWorkingDaysOfWeek"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(workTypeResultListNextHearingDatePreDateNonWorkingDaysOfWeek.size(), is(1));
         assertTrue(workTypeResultListNextHearingDatePreDateNonWorkingDaysOfWeek.contains(Map.of(
@@ -1642,5 +1641,202 @@ class CamundaTaskConfigurationTest extends DmnDecisionTableBaseUnitTest {
                 break;
         }
         return null;
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "addCaseNumber", "addCaseNumberResubmitted",
+            "sendToGateKeeperC100", "sendToGateKeeperResubmittedC100",
+            "sendToGateKeeperFL401", "sendToGateKeeperResubmittedFL401",
+            "serviceOfApplicationC100", "adminServeOrderC100",
+            "serviceOfApplicationFL401", "adminServeOrderFL401",
+            "requestSolicitorOrderC100", "requestSolicitorOrderFL401",
+            "reviewCorrespondenceC100", "reviewCorrespondenceFL401",
+            "removeLegalRepresentativeC100", "removeLegalRepresentativeFL401",
+            "confidentialCheckSOA", "reviewDocumentsForSolAndCafcassC100",
+            "reviewDocumentsForSolAndCafcassFL401",
+            "replyToMessageForCourtAdminC100", "replyToMessageForLA",
+            "replyToMessageForJudiciary", "reviewRaRequestsC100",
+            "reviewRaRequestsFL401", "reviewInactiveRaRequestsC100",
+            "reviewInactiveRaRequestsFL401", "appStatementOfServiceBySol",
+            "appStatementOfServiceByLiP", "appStatementOfServiceByBailiff",
+            "arrangeBailiffSOA", "appStatementOfServiceByAdmin",
+            "completefl416AndServe", "listWithoutNoticeHearingC100",
+            "listOnNoticeHearingFL401", "reviewAdditionalApplication",
+            "reviewLangAndSmReq", "recreateApplicationPack", "replyToMessageForCourtAdminFL401"
+    })
+    void when_given_task_type_then_name_workType_and_validate_value_routine_work(
+            String taskType) {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue(
+                "taskAttributes",
+                Map.of("taskId", "1234",
+                        "taskType", taskType,
+                        "name", "workType"
+                )
+        );
+        Map<String, Object> caseData = new HashMap<>(); // allow null values
+        caseData.put("caseTypeOfApplication", "C100");
+        inputVariables.putValue("caseData", caseData);
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+
+        List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
+                .filter((r) -> r.containsValue("routine_work"))
+                .toList();
+
+        assertThat(workTypeResultList.size(), is(1));
+
+        assertTrue(workTypeResultList.contains(Map.of(
+                "name", "workType",
+                "value", "routine_work"
+        )));
+
+        assertDescriptionField(taskType, dmnDecisionTableResult);
+
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "directionOnIssue", "directionOnIssueResubmitted",
+            "gateKeeping", "gateKeepingResubmitted",
+            "reviewSolicitorOrderProvided",
+            "reviewAdminOrderProvided", "reviewAdminOrderByManager"
+    })
+    void when_given_task_type_then_name_workType_and_validate_value_decision_making_work(
+            String taskType) {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue(
+                "taskAttributes",
+                Map.of("taskId", "1234",
+                        "taskType", taskType,
+                        "name", "workType"
+                )
+        );
+        Map<String, Object> caseData = new HashMap<>(); // allow null values
+        caseData.put("caseTypeOfApplication", "C100");
+        inputVariables.putValue("caseData", caseData);
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+
+        List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
+                .filter((r) -> r.containsValue("decision_making_work"))
+                .toList();
+
+        assertThat(workTypeResultList.size(), is(1));
+
+        assertTrue(workTypeResultList.contains(Map.of(
+                "name", "workType",
+                "value", "decision_making_work"
+        )));
+
+        assertDescriptionField(taskType, dmnDecisionTableResult);
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "produceHearingBundleC100", "produceHearingBundleFL401",
+            "updateHearingActualsC100", "updateHearingActualsFL401",
+            "createHearingRequest", "createMultipleHearingRequest",
+            "createHearingRequestReserveListAssist"
+    })
+    void when_given_task_type_then_name_workType_and_validate_value_hearing_work(
+            String taskType) {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue(
+                "taskAttributes",
+                Map.of("taskId", "1234",
+                        "taskType", taskType,
+                        "name", "workType"
+                )
+        );
+        Map<String, Object> caseData = new HashMap<>(); // allow null values
+        caseData.put("caseTypeOfApplication", "C100");
+        inputVariables.putValue("caseData", caseData);
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+
+        List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
+                .filter((r) -> r.containsValue("hearing_work"))
+                .toList();
+
+        assertThat(workTypeResultList.size(), is(1));
+
+        assertTrue(workTypeResultList.contains(Map.of(
+                "name", "workType",
+                "value", "hearing_work"
+        )));
+
+        assertDescriptionField(taskType, dmnDecisionTableResult);
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "checkApplicationC100", "checkApplicationFL401",
+            "checkApplicationResubmittedC100", "checkApplicationResubmittedFL401"
+    })
+    void when_given_task_type_then_name_workType_and_validate_value_applications(
+            String taskType) {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue(
+                "taskAttributes",
+                Map.of("taskId", "1234",
+                        "taskType", taskType,
+                        "name", "workType"
+                )
+        );
+        Map<String, Object> caseData = new HashMap<>(); // allow null values
+        caseData.put("caseTypeOfApplication", "C100");
+        inputVariables.putValue("caseData", caseData);
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+
+        List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
+                .filter((r) -> r.containsValue("applications"))
+                .toList();
+
+        assertThat(workTypeResultList.size(), is(1));
+
+        assertTrue(workTypeResultList.contains(Map.of(
+                "name", "workType",
+                "value", "applications"
+        )));
+
+        assertDescriptionField(taskType, dmnDecisionTableResult);
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "reviewSpecificAccessRequestJudiciary",
+            "reviewSpecificAccessRequestLegalOps",
+            "reviewSpecificAccessRequestAdmin",
+            "reviewSpecificAccessRequestCTSC"
+    })
+    void when_given_task_type_then_name_workType_and_validate_value_access_requests(
+            String taskType) {
+        VariableMap inputVariables = new VariableMapImpl();
+        inputVariables.putValue(
+                "taskAttributes",
+                Map.of("taskId", "1234",
+                        "taskType", taskType,
+                        "name", "workType"
+                )
+        );
+        Map<String, Object> caseData = new HashMap<>(); // allow null values
+        caseData.put("caseTypeOfApplication", "C100");
+        inputVariables.putValue("caseData", caseData);
+
+        DmnDecisionTableResult dmnDecisionTableResult = evaluateDmnTable(inputVariables);
+
+        List<Map<String, Object>> workTypeResultList = dmnDecisionTableResult.getResultList().stream()
+                .filter((r) -> r.containsValue("access_requests"))
+                .toList();
+
+        assertThat(workTypeResultList.size(), is(1));
+
+        assertTrue(workTypeResultList.contains(Map.of(
+                "name", "workType",
+                "value", "access_requests"
+        )));
     }
 }
